<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f7f7" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="55dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp" >

            <LinearLayout
                android:id="@+id/newsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/optionbutton"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/icon_option_text_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\uf11d"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alarmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/optionbutton"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/icon_option_text_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\uf159"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/alarm"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/busButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/optionbutton"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/icon_option_text_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\ue072"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/colectivos"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/accountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/optionbutton"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/icon_option_text_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\uf119"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Red Bus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taxiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/optionbutton"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/icon_option_text_taxi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\ue066"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Taxi/Remis"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/interestButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/optionbutton"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/icon_option_text_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\ue04c"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Comercios y Lugares"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/wizardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/optionbutton"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/icon_option_text_wizard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\uf13d"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Cambiar\nCiudad"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favoritesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="6dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/dark_dotted_line" />

                <TextView
                    android:id="@+id/favoritesTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="Lugares y Comercios Favoritos"
                    android:textColor="@color/option_font"
                    android:textSize="11sp" />

                <LinearLayout
                    android:id="@+id/favoritesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/dark_dotted_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/optionbutton"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/icon_option_text_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="\uf307"
                    android:textColor="@color/option_font"
                    android:textSize="@dimen/icons_txt_size" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Configuración"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/option_font" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EEFFFFFF" 
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
                    android:id="@+id/currentCityTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="En 5' Estoy"
                    android:textColor="@color/option_font"
                    android:textSize="20sp"
                    android:layout_centerInParent="true" />
        
        
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/topPanelShadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/headerLayout"
        android:src="@drawable/shadow" />

</RelativeLayout>